--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,7 @@
 <head>
   <title>KaBoom</title>
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
 <body>
